--- a/src/pages/add-test-question/index.wxss
+++ b/src/pages/add-test-question/index.wxss
@@ -12,6 +12,26 @@
   margin-top: 28rpx;
 }
 
+van-notify {
+  z-index: 1001;
+}
+
+
+.close-input {
+  width: 30rpx;
+  height: 30rpx;
+  position: absolute;
+  right: 85rpx;
+  top: 175rpx;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E %3Cpath id='Icon_ionic-ios-close' data-name='Icon ionic-ios-close' d='M14.352,13.407l2.857-2.858a.67.67,0,1,0-.947-.947L13.405,12.46,10.548,9.6a.67.67,0,1,0-.947.947l2.857,2.858L9.6,16.265a.67.67,0,0,0,.947.947l2.857-2.858,2.857,2.858a.67.67,0,0,0,.947-.947Z' transform='translate(-9.404 -9.407)'/%3E %3C/svg%3E ");
+}
+
+.ready-question {
+  text-decoration: underline;
+}
+
 input {
   width: 200rpx;
 }
