--- a/src/components/question-com/index.wxss
+++ b/src/components/question-com/index.wxss
@@ -1,7 +1,8 @@
 .question-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  width: 130rpx;
 }
 
 
@@ -32,7 +33,7 @@
 .delete-back {
   background: white;
   position: relative;
-  left: 40rpx;
+  left: 70rpx;
   padding: 14rpx;
   box-shadow: 0 0 20rpx 0 lightgray;
   border-radius: 20rpx;
